# cachalog

./: .dockerignore  .gitignore  Dockerfile  README.md
.github/workflows/: docker-image.yml
cmake/: base_template.cmake  download_template.cmake  macro_template.cmake  project_template.cmake  win32_template.cmake
cmake/dependencies/: CMakeLists.txt
cmake/dependencies_unix/: CMakeLists.txt
cmake/dependencies_win32/: CMakeLists.txt
cmake/dependencies_xcode/: CMakeLists.txt
cmake/downloads/: CMakeLists.txt
cmake/solution_unix/: CMakeLists.txt
cmake/solution_win32/: CMakeLists.txt
cmake/solution_xcode/: CMakeLists.txt
deploy/: Dockerfile
docker/: Dockerfile
src/: CMakeLists.txt
src/cachalog_config/: CMakeLists.txt  cachalog_config.h
src/cachalog_grid/: CMakeLists.txt  cachalog_attribute.h  cachalog_grid_request_insert.c  cachalog_grid_request_log.c  cachalog_grid_request_select.c  cachalog_message.h  cachalog_record.h  cachalog_service.c  cachalog_service.h  cachalog_tag.h  main.c
src/cachalog_http/: CMakeLists.txt  cachalog_http.c  cachalog_http.h
src/cachalog_json/: CMakeLists.txt  cachalog_json.c  cachalog_json.h
src/cachalog_log/: CMakeLists.txt  cachalog_log.c  cachalog_log.h
src/cachalog_log_console/: CMakeLists.txt  cachalog_log_console.c  cachalog_log_console.h
src/cachalog_log_file/: CMakeLists.txt  cachalog_log_file.c  cachalog_log_file.h
src/cachalog_memory/: CMakeLists.txt  cachalog_memory.c  cachalog_memory.h
src/cachalog_mutex/: CMakeLists.txt  cachalog_mutex.h  cachalog_mutex_win32.c
src/cachalog_platform/: CMakeLists.txt  cachalog_platform_windows.h
src/cachalog_thread/: CMakeLists.txt  cachalog_thread.h  cachalog_thread_pthread.c  cachalog_thread_win32.c
src/cachalog_utils/: CMakeLists.txt  cachalog_clock.c  cachalog_clock.h  cachalog_date.c  cachalog_date.h  cachalog_file.c  cachalog_file.h  cachalog_getopt.c  cachalog_getopt.h  cachalog_math.c  cachalog_math.h  cachalog_rand.c  cachalog_rand.h  cachalog_ring.h  cachalog_time.h  cachalog_time_unix.c  cachalog_time_win32.c
src/cachalot_json/: CMakeLists.txt  cachalog_json.c  cachalog_json.h
src/ch_grid/: CMakeLists.txt  ch_attribute.h  ch_config.h  ch_grid_request.c  ch_grid_request.h  ch_grid_request_insert.c  ch_grid_request_select.c  ch_message.h  ch_record.h  ch_service.c  ch_service.h  ch_tag.h  main.c
tests/: README.md  cachalog.py  cachalot.py  client.py  conftest.py  grid.json  print.py  record_fabric.py  test.py  test_crash.py
