CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

ADD_SUBDIRECTORY(cachalog_config)
ADD_SUBDIRECTORY(cachalog_platform)
ADD_SUBDIRECTORY(cachalog_memory)
ADD_SUBDIRECTORY(cachalog_thread)
ADD_SUBDIRECTORY(cachalog_mutex)
ADD_SUBDIRECTORY(cachalog_utils)
ADD_SUBDIRECTORY(cachalog_json)
ADD_SUBDIRECTORY(cachalog_http)
ADD_SUBDIRECTORY(cachalog_log)
ADD_SUBDIRECTORY(cachalog_log_console)
ADD_SUBDIRECTORY(cachalog_log_file)
ADD_SUBDIRECTORY(cachalog_grid)

SET(CACHALOG_APPLICATION_LINK_LIBRARIES ${CACHALOG_APPLICATION_LINK_LIBRARIES} PARENT_SCOPE)
SET(CACHALOG_APPLICATION_DEPENDENCIES ${CACHALOG_APPLICATION_DEPENDENCIES} PARENT_SCOPE)