CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(dependencies_unix)

INCLUDE(../base_template.cmake)
INCLUDE(../unix_template.cmake)

SET(CACHALOT_REPOSITORY ${CMAKE_CURRENT_SOURCE_DIR}/../..)
SET(CACHALOT_DEPENDENCIES_DIRECTORY ${CACHALOT_REPOSITORY}/dependencies)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CACHALOT_ARCHIVE_OUTPUT_DIRECTORY})

SET(CACHALOT_DEPENDENCIES_TEMP_DIRECTORY ${CMAKE_BINARY_DIR}/dependencies)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../dependencies ${CACHALOT_DEPENDENCIES_TEMP_DIRECTORY})