CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(dependencies_xcode)

INCLUDE(../base_template.cmake)
INCLUDE(../xcode_template.cmake)

SET(CACHALOG_REPOSITORY ${CMAKE_CURRENT_SOURCE_DIR}/../..)
SET(CACHALOG_DEPENDENCIES_DIRECTORY ${CACHALOG_REPOSITORY}/dependencies)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CACHALOG_ARCHIVE_OUTPUT_DIRECTORY})

SET(CACHALOG_DEPENDENCIES_TEMP_DIRECTORY ${CMAKE_BINARY_DIR}/dependencies)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../dependencies ${CACHALOG_DEPENDENCIES_TEMP_DIRECTORY})