PROJECT(cachalog_grid C)

ADD_FILTER(
src
    main.c
    
    cachalog_attribute.h
    cachalog_record.h
    cachalog_message.h
    cachalog_service.h
    cachalog_service.c
    
    cachalog_grid_request_log.c
)

INCLUDE_DIRECTORIES(${CACHALOG_CONFIGURATION_DIRECTORY}/libevent/include)
INCLUDE_DIRECTORIES(${CACHALOG_DEPENDENCIES_SOURCE_DIRECTORY}/libevent/include)

IF(CACHALOG_TARGET_OSX)
    ADD_EXECUTABLE(${PROJECT_NAME} MACOSX_BUNDLE ${CACHALOG_SOURCE_FILES})
ELSEIF(CACHALOG_TARGET_WIN32)
    ADD_EXECUTABLE(${PROJECT_NAME} WIN32 ${CACHALOG_SOURCE_FILES})
ELSEIF(CACHALOG_TARGET_UNIX)
    ADD_EXECUTABLE(${PROJECT_NAME} ${CACHALOG_SOURCE_FILES})
ENDIF()

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CACHALOG_DEPENDENCIES_LIBRARY_DIRECTORY}/${CMAKE_STATIC_LIBRARY_PREFIX}event${CMAKE_STATIC_LIBRARY_SUFFIX})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CACHALOG_DEPENDENCIES_LIBRARY_DIRECTORY}/${CMAKE_STATIC_LIBRARY_PREFIX}yyjson${CMAKE_STATIC_LIBRARY_SUFFIX})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} cachalog_http)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} cachalog_json)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} cachalog_log)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} cachalog_log_console)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} cachalog_log_file)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} cachalog_thread)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} cachalog_utils)

IF(CACHALOG_TARGET_WIN32)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} Ws2_32.lib)
ENDIF()

IF(MSVC)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} Iphlpapi.lib)
ENDIF()