PROJECT(cachalog_http C)

ADD_FILTER(
src
    cachalog_http.h
    cachalog_http.c
)

INCLUDE_DIRECTORIES(${CACHALOG_CONFIGURATION_DIRECTORY}/libevent/include)
INCLUDE_DIRECTORIES(${CACHALOG_DEPENDENCIES_SOURCE_DIRECTORY}/libevent/include)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${CACHALOG_SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CACHALOG_DEPENDENCIES_LIBRARY_DIRECTORY}/${CMAKE_STATIC_LIBRARY_PREFIX}event${CMAKE_STATIC_LIBRARY_SUFFIX})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} cachalog_config)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} cachalog_utils)