PROJECT(cachalog_json C)

ADD_FILTER(
src
    cachalog_json.h
    cachalog_json.c
)

INCLUDE_DIRECTORIES(${CACHALOG_CONFIGURATION_DIRECTORY}/yyjson/include)
INCLUDE_DIRECTORIES(${CACHALOG_DEPENDENCIES_SOURCE_DIRECTORY}/yyjson/src)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${CACHALOG_SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CACHALOG_DEPENDENCIES_LIBRARY_DIRECTORY}/${CMAKE_STATIC_LIBRARY_PREFIX}yyjson${CMAKE_STATIC_LIBRARY_SUFFIX})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} cachalog_config)